[tool.poetry]
name = "python-activator"
version = "0.7"
description = ""
authors = ["kgrid developers <kgrid-developers@umich.edu>", "Farid Seifi <faridsei@med.umich.edu>"]
readme = "README.md"
packages = [{include = "python_activator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98"
pyyaml = "^6.0"
typer = {version="^0.9.0", optional=true}
requests = "^2.31"
uvicorn = {version="^0.23.1", optional=true}
pyld = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
tinyhtml = "^1.2.0"  # used in test fixtures
leftpad = "^0.1.2"  # used in test fixtures
ipykernel = "^6.24.0"
typer = "^0.9.0"
uvicorn = "^0.23.1"

[tool.poetry.extras]
cli=["uvicorn", "typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-activator="python_activator.cli:cli"


