[tool.poetry]
name = "python_simple_v1_0"
version = "0.1.0"
description = "Python Simple V1.0"
authors = ["kgrid developers <kgrid-developers@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
leftpad = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
